...
        android:textSize="25sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:textSize="18sp"
...
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_name">

            <ImageButton
                android:id="@+id/button_launch_dialog"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:layout_marginTop="28dp"
                android:contentDescription="@string/text_launch_dialog"
                android:elevation="12dp"
                android:src="@drawable/ic_dialog"
...
